Feat: hover effect in list added

--- a/01-layout/index.html
+++ b/01-layout/index.html
@@ -25,15 +25,15 @@
     <!-- Here starts Navigation menu -->
     <nav id="nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Content</a></li>
-            <li><a href="index.html">Requirements</a></li>
-            <li><a href="index.html">Programming languages</a></li>
-            <li><a href="index.html">Frameworks</a></li>
-            <li><a href="index.html">Teacher</a></li>
-            <li><a href="index.html">Reviews</a></li>
-            <li><a href="index.html">Blog</a></li>
-            <li><a href="index.html">Contact us</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Content</a></li>
+            <li><a href="">Requirements</a></li>
+            <li><a href="">Programming languages</a></li>
+            <li><a href="">Frameworks</a></li>
+            <li><a href="">Teacher</a></li>
+            <li><a href="">Reviews</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact us</a></li>
         </ul>
     </nav>
 
