Feat: display none to menu added

--- a/01-layout/index.html
+++ b/01-layout/index.html
@@ -1,44 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="../img/logo.png"/>
+    <link rel="icon" type="image/x-icon" href="../img/logo.png" />
 </head>
+
 <body>
     <h1></h1>
 
     <!-- Here starts the headboard -->
-     <header id="header">
+    <header id="header">
         <div id="logo">
             <img src="/img/logo.png" alt="logo">
         </div>
 
         <h1> <a href="index.html">css master</a></h1>
-     </header>
+    </header>
     <!-- Here ends the headboard-->
 
 
     <!-- Here starts Navigation menu -->
     <nav id="nav">
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Content</a></li>
-            <li><a href="">Requirements</a></li>
-            <li><a href="">Programming languages</a></li>
-            <li><a href="">Frameworks</a></li>
-            <li><a href="">Teacher</a></li>
-            <li><a href="">Reviews</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contact us</a></li>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="index.html">Content</a>
+            </li>
+            <li>
+                <a href="index.html">Requirements</a>
+            </li>
+            <li>
+                <a href="index.html">Programming languages</a>
+                <ul>
+                    <li>
+                        <a href="index.html">JS</a>
+                    </li>
+
+                    <li>
+                        <a href="index.html">Python</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="index.html">Frameworks</a>
+                <ul>
+                    <li>
+                        <a href="index.html">Express.js</a>
+                    </li>
+
+                    <li>
+                        <a href="index.html">Django</a>
+                    </li>
+
+                    <li>
+                        <a href="index.html">Vue.js</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="index.html">Teacher</a>
+            </li>
+            <li>
+                <a href="index.html">Reviews</a>
+            </li>
+            <li>
+                <a href="index.html">Blog</a>
+            </li>
+            <li>
+                <a href="index.html">Contact us</a>
+            </li>
         </ul>
     </nav>
 
-     <!-- Here ends the menu-->
+    <!-- Here ends the menu-->
 
 
 </body>
+
 </html>
