Feat: sidebar added

--- a/01-layout/index.html
+++ b/01-layout/index.html
@@ -81,6 +81,112 @@
 
     <!-- Here ends the menu-->
 
+    <!--     
+Here starts the navigation content  -->
+
+    <div id="content">
+
+    <!-- Here starts the sidebar -->
+
+    <aside class="aside">
+
+        <div class="widget" id="login">
+
+            <h3>Enter the website</h3>
+
+            <form>
+                <label for="">User:</label>
+                <input type="text" />
+
+                <label for="">Password</label>
+                <input type="password" />
+
+
+                <input type="submit" value="Enter" />
+
+
+
+            </form>
+
+            <a href="#">Student zone</a>
+            <a href="#">Teacher zone</a>
+            <a href="#">Access to averages</a>
+
+        </div>
+
+
+        <div class="widget" id="login">
+
+            <h3>01. Virtual classroom</h3>
+
+            <form>
+                <label for="">User name:</label>
+                <input type="text" />
+
+                <label for="">Password</label>
+                <input type="password" />
+
+
+                <input type="submit" value="Enter" />
+
+
+
+            </form>
+
+
+        </div>
+
+
+
+        <div class="widget" id="login">
+
+            <h3>Links</h3>
+
+            <ul>
+                <li>
+                    <a href="https://www.yunuenacostameza.com/">
+                        Home
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://www.yunuenacostameza.com/estudios">
+                        Studies
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://www.yunuenacostameza.com/experiencia">
+                        Experience
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://www.yunuenacostameza.com/habilidades">
+                        Skills
+                    </a>
+                </li>
+
+            </ul>
+
+
+        </div>
+
+
+
+
+    </aside>
+
+
+    <!-- Here ends the sidebar -->
+
+
+
+
+    <!--   Here ends the navigation content   -->
+
+
+
 
 </body>
 
