Feat: forms added

--- a/01-layout/index.html
+++ b/01-layout/index.html
@@ -88,7 +88,7 @@ Here starts the navigation content  -->
 
     <!-- Here starts the sidebar -->
 
-    <aside class="aside">
+    <aside id="aside">
 
         <div class="widget" id="login">
 
@@ -96,7 +96,7 @@ Here starts the navigation content  -->
 
             <form>
                 <label for="">User:</label>
-                <input type="text" />
+                <input type="text"/>
 
                 <label for="">Password</label>
                 <input type="password" />
@@ -118,6 +118,28 @@ Here starts the navigation content  -->
         <div class="widget" id="login">
 
             <h3>01. Virtual classroom</h3>
+
+            <form>
+                <label for="">User name:</label>
+                <input type="text" />
+
+                <label for="">Password</label>
+                <input type="password" />
+
+
+                <input type="submit" value="Enter" />
+
+
+
+            </form>
+
+
+        </div>
+
+
+        <div class="widget" id="login">
+
+            <h3>02. Virtual classroom</h3>
 
             <form>
                 <label for="">User name:</label>
