Feat: aside finished

--- a/01-layout/index.html
+++ b/01-layout/index.html
@@ -124,7 +124,7 @@ Here starts the navigation content  -->
                 <input type="text" />
 
                 <label for="">Password</label>
-                <input type="password" />
+                <input type="password"/>
 
 
                 <input type="submit" value="Enter" />
@@ -146,7 +146,7 @@ Here starts the navigation content  -->
                 <input type="text" />
 
                 <label for="">Password</label>
-                <input type="password" />
+                <input type="password"/>
 
 
                 <input type="submit" value="Enter" />
@@ -197,6 +197,11 @@ Here starts the navigation content  -->
 
 
 
+    </aside>
+
+    <aside id="phrase">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi temporibus esse, nisi debitis neque possimus nihil enim suscipit distinctio amet non ex ratione culpa corrupti dolores sunt? Modi, adipisci et!
+        <a href="#">Read more quotes</a>
     </aside>
 
 
