Feat: section one added

--- a/01-layout/index.html
+++ b/01-layout/index.html
@@ -86,131 +86,186 @@ Here starts the navigation content  -->
 
     <div id="content">
 
-    <!-- Here starts the sidebar -->
+        <!-- Here starts the sidebar -->
 
-    <aside id="aside">
+        <aside id="aside">
 
-        <div class="widget" id="login">
+            <div class="widget" id="login">
 
-            <h3>Enter the website</h3>
+                <h3>Enter the website</h3>
 
-            <form>
-                <label for="">User:</label>
-                <input type="text"/>
+                <form>
+                    <label for="">User:</label>
+                    <input type="text" />
 
-                <label for="">Password</label>
-                <input type="password" />
-
-
-                <input type="submit" value="Enter" />
+                    <label for="">Password</label>
+                    <input type="password" />
 
 
+                    <input type="submit" value="Enter" />
 
-            </form>
 
-            <a href="#">Student zone</a>
-            <a href="#">Teacher zone</a>
-            <a href="#">Access to averages</a>
 
+                </form>
+
+                <a href="#">Student zone</a>
+                <a href="#">Teacher zone</a>
+                <a href="#">Access to averages</a>
+
+            </div>
+
+
+            <div class="widget" id="login">
+
+                <h3>01. Virtual classroom</h3>
+
+                <form>
+                    <label for="">User name:</label>
+                    <input type="text" />
+
+                    <label for="">Password</label>
+                    <input type="password" />
+
+
+                    <input type="submit" value="Enter" />
+
+
+
+                </form>
+
+
+            </div>
+
+
+            <div class="widget" id="login">
+
+                <h3>02. Virtual classroom</h3>
+
+                <form>
+                    <label for="">User name:</label>
+                    <input type="text" />
+
+                    <label for="">Password</label>
+                    <input type="password" />
+
+
+                    <input type="submit" value="Enter" />
+
+
+
+                </form>
+
+
+            </div>
+
+
+
+            <div class="widget" id="login">
+
+                <h3>Links</h3>
+
+                <ul>
+                    <li>
+                        <a href="https://www.yunuenacostameza.com/">
+                            Home
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.yunuenacostameza.com/estudios">
+                            Studies
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.yunuenacostameza.com/experiencia">
+                            Experience
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.yunuenacostameza.com/habilidades">
+                            Skills
+                        </a>
+                    </li>
+
+                </ul>
+
+
+            </div>
+
+
+
+
+        </aside>
+
+        <aside id="phrase">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi temporibus esse, nisi debitis neque
+            possimus nihil enim suscipit distinctio amet non ex ratione culpa corrupti dolores sunt? Modi, adipisci et!
+            <a href="#">Read more quotes</a>
+        </aside>
+
+
+        <!-- Here ends the sidebar -->
+
+        <div id="sections">
+            <section id="frontend">
+                    <span class="stickers">
+                        <img class="stickerOne" src="../img/scotch.png" alt="sticker"/>
+                        <img class="stickerTwo" src="../img/scotch.png" alt="sticker"/>
+                        
+                    </span>
+
+                <h2 class="title">Front-end news</h2>
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                 </article>
+
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+            </section>
         </div>
 
 
-        <div class="widget" id="login">
-
-            <h3>01. Virtual classroom</h3>
-
-            <form>
-                <label for="">User name:</label>
-                <input type="text" />
-
-                <label for="">Password</label>
-                <input type="password"/>
-
-
-                <input type="submit" value="Enter" />
-
-
-
-            </form>
-
-
-        </div>
-
-
-        <div class="widget" id="login">
-
-            <h3>02. Virtual classroom</h3>
-
-            <form>
-                <label for="">User name:</label>
-                <input type="text" />
-
-                <label for="">Password</label>
-                <input type="password"/>
-
-
-                <input type="submit" value="Enter" />
-
-
-
-            </form>
-
-
-        </div>
-
-
-
-        <div class="widget" id="login">
-
-            <h3>Links</h3>
-
-            <ul>
-                <li>
-                    <a href="https://www.yunuenacostameza.com/">
-                        Home
-                    </a>
-                </li>
-
-                <li>
-                    <a href="https://www.yunuenacostameza.com/estudios">
-                        Studies
-                    </a>
-                </li>
-
-                <li>
-                    <a href="https://www.yunuenacostameza.com/experiencia">
-                        Experience
-                    </a>
-                </li>
-
-                <li>
-                    <a href="https://www.yunuenacostameza.com/habilidades">
-                        Skills
-                    </a>
-                </li>
-
-            </ul>
-
-
-        </div>
-
-
-
-
-    </aside>
-
-    <aside id="phrase">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi temporibus esse, nisi debitis neque possimus nihil enim suscipit distinctio amet non ex ratione culpa corrupti dolores sunt? Modi, adipisci et!
-        <a href="#">Read more quotes</a>
-    </aside>
-
-
-    <!-- Here ends the sidebar -->
-
-
-
-
-    <!--   Here ends the navigation content   -->
+        <!--   Here ends the navigation content   -->
 
 
 
