Feat: sections added

--- a/01-layout/index.html
+++ b/01-layout/index.html
@@ -210,11 +210,11 @@ Here starts the navigation content  -->
 
         <div id="sections">
             <section id="frontend">
-                    <span class="stickers">
-                        <img class="stickerOne" src="../img/scotch.png" alt="sticker"/>
-                        <img class="stickerTwo" src="../img/scotch.png" alt="sticker"/>
-                        
-                    </span>
+                <span class="stickers">
+                    <img class="stickerOne" src="../img/scotch.png" alt="sticker" />
+                    <img class="stickerTwo" src="../img/scotch.png" alt="sticker" />
+
+                </span>
 
                 <h2 class="title">Front-end news</h2>
                 <article class="article">
@@ -248,7 +248,120 @@ Here starts the navigation content  -->
                     </p>
                     <span class="date">[07/04/2023]</span>
 
-                 </article>
+                </article>
+
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+            </section>
+
+
+
+
+            <section id="backend">
+                <span class="stickers">
+                    <img class="stickerOne" src="../img/scotch.png" alt="sticker" />
+                    <img class="stickerTwo" src="../img/scotch.png" alt="sticker" />
+
+                </span>
+
+                <h2 class="title">Back-end news</h2>
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+            </section>
+
+
+
+            <section id="teacher">
+                <span class="stickers">
+                    <img class="stickerOne" src="../img/scotch.png" alt="sticker" />
+                    <img class="stickerTwo" src="../img/scotch.png" alt="sticker" />
+
+                </span>
+
+                <h2 class="title">Teacher news</h2>
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
+
+                <article class="article">
+                    <p>
+                        <a href="#">Title</a>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore molestias aperiam architecto
+                        reiciendis eveniet unde repudiandae magni rerum id maiores laudantium ut quae doloremque quaerat
+                        reprehenderit, fuga itaque sint assumenda.
+                    </p>
+                    <span class="date">[07/04/2023]</span>
+
+                </article>
 
                 <article class="article">
                     <p>
