Feat: font-family added

--- a/01-layout/index.html
+++ b/01-layout/index.html
@@ -199,12 +199,7 @@ Here starts the navigation content  -->
 
         </aside>
 
-        <aside id="phrase">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi temporibus esse, nisi debitis neque
-            possimus nihil enim suscipit distinctio amet non ex ratione culpa corrupti dolores sunt? Modi, adipisci et!
-            <a href="#">Read more quotes</a>
-        </aside>
-
+      
 
         <!-- Here ends the sidebar -->
 
@@ -377,7 +372,12 @@ Here starts the navigation content  -->
             </section>
         </div>
 
-
+        <aside id="phrase">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi temporibus esse, nisi debitis neque
+            possimus nihil enim suscipit distinctio amet non ex ratione culpa corrupti dolores sunt? Modi, adipisci et!
+            <a href="#">Read more quotes</a>
+        </aside>
+</div>
         <!--   Here ends the navigation content   -->
 
 
