--- a/01-layout/index.html
+++ b/01-layout/index.html
@@ -211,7 +211,7 @@ Here starts the navigation content  -->
 
                 </span>
 
-                <h2 class="title">Front-end news</h2>
+                <h2 class="title orange">Front-end news</h2>
                 <article class="article">
                     <p>
                         <a href="#">Title</a>
@@ -268,7 +268,7 @@ Here starts the navigation content  -->
 
                 </span>
 
-                <h2 class="title">Back-end news</h2>
+                <h2 class="title red">Back-end news</h2>
                 <article class="article">
                     <p>
                         <a href="#">Title</a>
@@ -324,7 +324,7 @@ Here starts the navigation content  -->
 
                 </span>
 
-                <h2 class="title">Teacher news</h2>
+                <h2 class="title yellow">Teacher news</h2>
                 <article class="article">
                     <p>
                         <a href="#">Title</a>
@@ -377,7 +377,7 @@ Here starts the navigation content  -->
             possimus nihil enim suscipit distinctio amet non ex ratione culpa corrupti dolores sunt? Modi, adipisci et!
             <a href="#">Read more quotes</a>
         </aside>
-</div>
+
         <!--   Here ends the navigation content   -->
 
 
